--- a/prueba html.html
+++ b/prueba html.html
@@ -1,8 +1,8 @@
-HTML>
+<HTML>
 
 <HEAD>
 
-<TITLE>Un Titulo para el Browser de turno </TITLE>
+<TITLE>Un Titulo para el Browser de turno pruebaaaaaaaaa</TITLE>
 
 </HEAD>
 
